Simplified code segments