@@ -1,9 +1,7 @@
 package SweetBubbleTea;
 
 import com.jagrosh.jdautilities.commons.waiter.EventWaiter;
-import commands.Miscellaneous.Avatar;
-import commands.Miscellaneous.Coin;
-import commands.Miscellaneous.Ping;
+import commands.Miscellaneous.*;
 import commands.Moderation.*;
 import commands.RPG.*;
 import commandutils.Command;
@@ -18,6 +16,7 @@ import javax.security.auth.login.LoginException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.EnumSet;
+import java.util.List;
 
 
 public class Bot {
@@ -29,36 +28,38 @@ public class Bot {
     EnumSet<GatewayIntent> gatewayIntents = EnumSet.of(
             GatewayIntent.GUILD_MEMBERS,
             GatewayIntent.GUILD_MESSAGE_REACTIONS,
-            GatewayIntent.GUILD_MESSAGES);
+            GatewayIntent.GUILD_MESSAGES,
+            GatewayIntent.GUILD_PRESENCES);
 
-    ArrayList<ListenerAdapter> listenerAdapters = new ArrayList<>(
-            Arrays.asList(new Listener()
-            ));
+    List<ListenerAdapter> listenerAdapters =
+            List.of(new Listener());
 
-    ArrayList<Command> commands = new ArrayList<>(
-            Arrays.asList(new Ping(),
-                    new Avatar(),
-                    new Invite(),
-                    new Coin(),
-                    new Clear(),
-                    new Timer(),
-                    new Classes(waiter),
-                    new Stats(),
-                    new Xp(),
-                    new Level(),
-                    new Ban(),
-                    new Kick(),
-                    new Deafen(),
-                    new Unban(),
-                    new Undeafen(),
-                    new Unmute(),
-                    new Mute(),
-                    new AddRoles(),
-                    new RemoveRoles(),
-                    new Nicknames(),
-                    new Owner(),
-                    new Leave()
-            ));
+    List<Command> commands = List.of(new Ping(),
+            new Avatar(),
+            new Invite(),
+            new Coin(),
+            new Clear(),
+            new Timer(),
+            new Classes(waiter),
+            new Stats(),
+            new Xp(),
+            new Level(),
+            new Ban(),
+            new Kick(),
+            new Deafen(),
+            new Unban(),
+            new Undeafen(),
+            new Unmute(),
+            new Mute(),
+            new AddRoles(),
+            new RemoveRoles(),
+            new Nicknames(),
+            new Owner(),
+            new Leave(),
+            new EightBall(),
+            new About(),
+            new User()
+            );
 
     public Bot(String token) {
         this.token = token;
@@ -75,7 +76,7 @@ public class Bot {
         }
         jdaBuilder.addEventListeners(waiter, waiter);
         jdaBuilder.enableIntents(gatewayIntents);
-        jdaBuilder.setActivity(Activity.playing("RPGBOT"));
+        jdaBuilder.setActivity(Activity.playing("Mod"));
         jda = jdaBuilder.build();
         jda.awaitReady();
     }
